--- a/blocks/content/__digits/digits.css
+++ b/blocks/content/__digits/digits.css
@@ -2,7 +2,7 @@
   margin: 100px auto;
 }
 
-.section__title {
+.title {
   text-align: center;
   width: 60%;
   margin: 0 auto;
@@ -11,7 +11,7 @@
   font-weight: 600;
 }
 
-.section__subtitle {
+.subtitle {
   width: 60%;
   text-align: center;
   margin-top: 20px;
