--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -31,7 +31,7 @@
   color: #f2f2f2;
 }
 
-.footer_column_links {
+.footer__column_links {
   display: flex;
   flex-direction: column;
   line-height: 30px;
@@ -39,7 +39,7 @@
   margin: 20px 0 16px;
 }
 
-.social_icon {
+.footer__social_icon {
   height: 16px;
   width: 16px;
   background-image: url(../logo_place_footer.svg);
